<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/apply"
        android:title="@string/apply"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="ifRoom" />
</menu>